Fix(ui): short gray background on left and short header when horizontal scrollbar appear
- Move some inline styles into CSS files

--- a/react-project-template/styles/global.css
+++ b/react-project-template/styles/global.css
@@ -1,41 +1,88 @@
 @font-face {
   font-family: 'Roboto';
-  src: local("Roboto"), url('../fonts/Roboto/Roboto-Regular.ttf') format('truetype');
+  src: local('Roboto'), url('../fonts/Roboto/Roboto-Regular.ttf') format('truetype');
   font-weight: 400;
   font-style: normal;
 }
 
 @font-face {
   font-family: 'Roboto';
-  src: local("Roboto"), url('../fonts/Roboto/Roboto-Italic.ttf') format('truetype');
+  src: local('Roboto'), url('../fonts/Roboto/Roboto-Italic.ttf') format('truetype');
   font-weight: 400;
   font-style: italic;
 }
 
 @font-face {
   font-family: 'Roboto';
-  src: local("Roboto"), url('../fonts/Roboto/Roboto-Medium.ttf') format('truetype');
+  src: local('Roboto'), url('../fonts/Roboto/Roboto-Medium.ttf') format('truetype');
   font-weight: 500;
   font-style: normal;
 }
 
 @font-face {
   font-family: 'Roboto';
-  src: local("Roboto"), url('../fonts/Roboto/Roboto-MediumItalic.ttf') format('truetype');
+  src: local('Roboto'), url('../fonts/Roboto/Roboto-MediumItalic.ttf') format('truetype');
   font-weight: 500;
   font-style: italic;
 }
+
+.sticky-col-wrapper {
+  position: sticky;
+  top: 0;
+  height: 100%;
+  /*width: calc((100% - 1552px) / 2 + 298px);*/
+  min-width: 298px;
+  overflow: hidden;
+}
+
+.sticky-col-with-hidden-scrollbar {
+  width: 100%;
+  height: 100%;
+  max-height: 100vh;
+  box-sizing: content-box; /* use 'content-box' to exclude the right padding of child's width */
+  padding-right: 20px; /* the right padding 20px is used to hide the scrollbar */
+  overflow: hidden auto;
+  overscroll-behavior: contain;
+}
+
+.main-container {
+  display: flex;
+  justify-content: center;
+  position: relative;
+  min-height: 100vh;
+}
+
+.main {
+  display: flex;
+  height: 100%;
+  width: 100%;
+  max-width: 1522px;
+  margin: 0 auto;
+}
+
+.left-gray-bg {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: calc((100% - 1522px) / 2 + 298px);
+  min-width: 298px;
+  background-color: #F5F7F9;
+}
+
+.side-nav-container {}
 
 .side-nav {
-
+  max-height: calc(100vh - 30px); /* reduce the top padding 20px and 10px when showing horizontal scrollbar */
+  padding-top: 20px;
+  border-right: 1px solid #E6ECF1;
 }
-
 .content {
   margin: 0 88px;
 }
 
 .table-of-content {
-
+  max-height: calc(100vh - 40px); /* reduce the top padding 40px 10px when showing horizontal scrollbar */
+  padding-top: 30px;
+  border-left: 1px solid #E6ECF1;
 }
-
-
